[gd_scene load_steps=4 format=3 uid="uid://dw024ehm7ov8"]

[ext_resource type="Script" path="res://scripts/hud/hud.gd" id="1_olqm0"]
[ext_resource type="FontFile" uid="uid://cc4n1yg7bibc8" path="res://assets/fonts/paint/TMT-Paint-Regular.otf" id="1_pxjbe"]
[ext_resource type="PackedScene" uid="uid://bexa2bw1ch6qh" path="res://blueprints/hud/player_bar.tscn" id="3_4bxo4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_olqm0")

[node name="MainContainer" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 1
offset_left = 150.0
offset_top = 150.0
offset_right = 1050.0
offset_bottom = 300.0

[node name="PlayerBar" parent="MainContainer/TopContainer" instance=ExtResource("3_4bxo4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomGrid" type="VBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -148.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 0

[node name="HintLabel" type="Label" parent="MainContainer/BottomGrid"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_pxjbe")
theme_override_font_sizes/font_size = 35
text = "Hello
"
horizontal_alignment = 1
vertical_alignment = 1
